admission/ValidatingAdmissionPolicy/policies/automount-service-account-token/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-automount-service-account-token
  annotations:
    kubeapt.io/uuid: "75834e82-5933-4ed1-a99c-0c7cf1b6dd23"
spec:
  automountServiceAccountToken: true
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
